[gd_scene load_steps=6 format=2]

[ext_resource path="res://dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/kenney_platformerpack/Spritesheets/spritesheet_alien.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/Raw/CC Wild Words Roman.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/NewGame.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 246.0
margin_bottom = 440.0
custom_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 246.0
margin_bottom = 183.0
custom_colors/font_color = Color( 1, 0.454902, 0.454902, 1 )
custom_fonts/font = SubResource( 1 )
text = "ALIEN"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 246.0
margin_bottom = 313.0
custom_constants/separation = 16

[node name="Level1" type="LinkButton" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 246.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "Level 1"
script = ExtResource( 4 )
scene_to_load = "Level 1"

[node name="Level2" type="LinkButton" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 38.0
margin_right = 246.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "Level 2"
script = ExtResource( 4 )
scene_to_load = "Level 2"

[node name="BackToMainMenu" type="LinkButton" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 76.0
margin_right = 246.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )
text = "Back To Main Menu"
script = ExtResource( 4 )
scene_to_load = "MainMenu"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 250.0
margin_right = 762.0
margin_bottom = 440.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 92.0
margin_right = 512.0
margin_bottom = 348.0
texture = ExtResource( 2 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer2/Level1" to="HBoxContainer/VBoxContainer/VBoxContainer2/Level1" method="_on_NewGame_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer2/Level1" to="HBoxContainer/VBoxContainer/VBoxContainer2/Level1" method="_on_Level1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer2/Level2" to="HBoxContainer/VBoxContainer/VBoxContainer2/Level2" method="_on_Level2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer2/BackToMainMenu" to="HBoxContainer/VBoxContainer/VBoxContainer2/BackToMainMenu" method="_on_BackToMainMenu_pressed"]
